Inserindo Fontes e Assets

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Clone Starbucks</title>
 </head>
 <body>
-    
+    <header>
+        <div class="line">
+            
+        </div>
+    </header>
 </body>
 </html>
