--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 </head>
 <body>
     <header>
-        <div class="line">
-            
+        <div class="line"></div>
+        <div class="container header--area">
+            <div class="header--left">
+                <a href=""><img src="images/logo.png" alt=""></a>
+            </div>
+            <div class="header--right">
+                <div class="header-search">
+                    <form action="" method="get">
+                        <input type="search" name="" id="" placeholder="Buscar">
+                        <button>
+                            <img src="images/loupe.png" alt="">
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
     </header>
 </body>
