--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
                 <a href=""><img src="images/logo.png" alt=""></a>
             </div>
             <div class="header--right">
-                <div class="header-search">
+                <div class="header--search">
                     <form action="" method="get">
                         <input type="search" name="" id="" placeholder="Buscar">
                         <button>
                             <img src="images/loupe.png" alt="">
                         </button>
                     </form>
+                </div>
+                <div class="header--menu">
+                    <img src="images/menu.png" alt="">
                 </div>
             </div>
         </div>
