--- a/index.html
+++ b/index.html
@@ -30,5 +30,17 @@
             </div>
         </div>
     </header>
+
+    <section class="banner">
+        <div class="container">
+            <h1>Starburcks&#174;<br>Happy hour</h1>
+            <span>Nos encontraremos em breve. Ofertas de bebidas estão a caminho.</span>
+            <div class="banner-images">
+                <img src="images/c1.jpg" alt="">
+                <img src="images/c2.jpg" alt="">
+                <img src="images/c3.jpg" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
