--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
     </section>
 
     <section class="area1">
-        <div class="area1-content">...</div>
-        <div class="area1-img1">,,,</div>
-        <div class="area1-img2">;;;</div>
+        <div class="area1-content">
+            <div class="bar"></div>
+            <h2>Quatro Drinks, Um Milhão de Razões</h2>
+            <div class="area1-quote">"Apenas ame a si mesmo e você está pronto." - Lady Gaga</div>
+            <div class="area1-text">Lady Gaga e Starbucks compartilham uma missão: Fazer um kinder, mundo mais corajoso. Através da fundação Born This Way. Lady Gaga tem inspirado seus fãs a para abraçar a bondade em suas comunidades-online e no mundo. Com sua ajuda, nós podemos empoderar jovens a espalhar mais bondade.</div>
+            <a href="">saiba mais</a>
+        </div>
+        <div class="area1-img1"></div>
+        <div class="area1-img2"></div>
     </section>
 </body>
 </html>
