--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <div class="area1-content">
             <div class="bar"></div>
             <h2>Quatro Drinks, Um Milhão de Razões</h2>
-            <div class="area1-quote">"Apenas ame a si mesmo e você está pronto." - Lady Gaga</div>
+            <div class="area1-quote"><em>"Apenas ame a si mesmo e você está pronto."</em> - Lady Gaga</div>
             <div class="area1-text">Lady Gaga e Starbucks compartilham uma missão: Fazer um kinder, mundo mais corajoso. Através da fundação Born This Way. Lady Gaga tem inspirado seus fãs a para abraçar a bondade em suas comunidades-online e no mundo. Com sua ajuda, nós podemos empoderar jovens a espalhar mais bondade.</div>
-            <a href="">saiba mais</a>
+            <a href="" class="button">saiba mais</a>
         </div>
         <div class="area1-img1"></div>
         <div class="area1-img2"></div>
