--- a/index.html
+++ b/index.html
@@ -54,5 +54,16 @@
         <div class="area1-img1"></div>
         <div class="area1-img2"></div>
     </section>
+
+    <section class="area2">
+        <div class="area2-content">
+            <div class="bar"></div>
+            <h2>Apresentando Baunilha Sweet Cream Cold Brew-Doce, Cremoso, Frio, Ousado.</h2>
+            <div class="area2-text">Pouco antes de servir, nossa mistura personalizada de café Starbucks Cold Brew é coberta com uma delicada camada de creme doce de baunilha caseiro que cai em cascata por toda a xícara.</div>
+            <a href="" class="button">saiba mais</a>
+        </div>
+        <div class="area2-img1"></div>
+        <div class="area2-img2"></div>
+    </section>
 </body>
 </html>
