--- a/index.html
+++ b/index.html
@@ -65,5 +65,14 @@
         <div class="area2-img1"></div>
         <div class="area2-img2"></div>
     </section>
+
+    <section class="area3">
+        <div class="area3-content">
+            <h2>O Novo Frappuccino Ultra<br>Caramelo Está Aqui!</h2>
+            <div class="area3-text">Parabéns por fazer isso! Isso pede caramelo. Muitos disso. Com chantilly gelado. Chegou o novo Frapuccino Ultra Caramel.</div>
+            <a href="" class="button">saiba mais</a>
+        </div>
+        <div class="area3-img1">...</div>
+    </section>
 </body>
 </html>
