--- a/index.html
+++ b/index.html
@@ -74,5 +74,15 @@
         </div>
         <div class="area3-img1">...</div>
     </section>
+
+    <section class="area4">
+        <div class="area4-content">
+            <div class="bar"></div>
+            <h2>A Bondade Começa<br>Com Um Copo</h2>
+            <div class="area4-text">Apresentamos a coleção copos da Gentileza: Quatro bebidas muito especiais tão deliciosas e refrescantes quanto lindas. Duas novas criações, Matcha Lemonade e Violet Drink, se juntarão ao Pink Drink e Ombré Pink Drink como favoritos instantâneos do verão.</div>
+            <a href="" class="button">saiba mais</a>
+        </div>
+        <div class="area4-img1"></div>
+    </section>
 </body>
 </html>
