--- a/index.html
+++ b/index.html
@@ -84,5 +84,12 @@
         </div>
         <div class="area4-img1"></div>
     </section>
+
+    <section class="area5"></section>
+
+    <footer>
+        Desenvolvido por <a href="https://www.linkedin.com/in/hiago-henrique-gomes-a955a6188/" target="_blank">Hiago Henrique</a><br>
+        Créditos do layout para <a href="https://nicepage.com/" target="_blank">Nice Page</a>
+    </footer>
 </body>
 </html>
