--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="area3-text">Parabéns por fazer isso! Isso pede caramelo. Muitos disso. Com chantilly gelado. Chegou o novo Frapuccino Ultra Caramel.</div>
             <a href="" class="button">saiba mais</a>
         </div>
-        <div class="area3-img1">...</div>
+        <div class="area3-img1"></div>
     </section>
 
     <section class="area4">
